Refatora estrutura do projeto
